deploy/aspnet-app/BASES-aspnet-core/bases/service-api-lb.yaml
apiVersion: v1
kind: Service
metadata:
  name: api
spec:
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
      name: http
  selector:
    component: api
