deploy/aspnet-app/BASES-aspnet-core/bases/service-api-np.yaml
apiVersion: v1
kind: Service
metadata:
  name: api
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
      name: http
  selector:
    component: api
